--- a/lang/en.json
+++ b/lang/en.json
@@ -46,7 +46,7 @@
     "WFRP4eEndeavours.Link.Training": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.0T8zisBH3D082Ztw]{Training}.",
     "WFRP4eEndeavours.Link.Learning": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.bWcKCn1S1ufDG9bJ]{Unusual Learning}.",
     "WFRP4eEndeavours.Link.Combat": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.517cQPn5p1bkRUgu]{Combat Training}.",
-    "WFRP4eEndeavours.Link.Dissent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RHsuOsC5DpoD4bkR]{Foment Dissent}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.z6mDmQzkTgmWAn7W]{Foment Dissent (Gossip)} and @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.WNTHJ26Ri47PNbpy]Foment Dissent (Charm)}",
+    "WFRP4eEndeavours.Link.Dissent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RHsuOsC5DpoD4bkR]{Foment Dissent}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.z6mDmQzkTgmWAn7W]{Foment Dissent (Gossip)} and @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.WNTHJ26Ri47PNbpy]{Foment Dissent (Charm)}",
     "WFRP4eEndeavours.Link.News": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.Ujg3N2RiGC4RNSvH]{The Latest News}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.1BH6KfEaP7bFsbTn]{The Latest News}",
     "WFRP4eEndeavours.Link.Reputation": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.N4EC4CCPZtX9i5qa]{Reputation}.",
     "WFRP4eEndeavours.Link.Research": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.2fjLtw5evY7LnjS0]{Research Lore}.",
