Added Extra Endeavours

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,19 @@
 {
+    "settings.altdorf.name": "Altdorf Endeavours",
+    "settings.altdorf.hint": "Adds the endeavours included in Altdorf: Crown of the Empire.",
+    "settings.shelley.name": "Shelley Endeavour",
+    "settings.shelley.hint": "Adds the endeavour granted by Scealleah 'Shelley' Thorncobble (Patrons of the Old World I).",
+    "settings.farforian.name": "Farforian Endeavour",
+    "settings.farforian.hint": "Adds the endeavour granted by Farforian Whiteshore (Patrons of the Old World I).",
+    "settings.willhelm.name": "Willhelm Endeavour",
+    "settings.willhelm.hint": "Adds the endeavour granted by Willhelm von Vaulk (Patrons of the Old World II).",
+    "settings.angela.name": "Angela Endeavour",
+    "settings.angela.hint": "Adds the endeavour granted by Angela Hedame (Patrons of the Old World II).",
+    "settings.rosendorn.name": "Rosendorn Endeavour",
+    "settings.rosendorn.hint": "Adds the endeavour granted by Bryannah 'der Briek\u00E4se Rosendorn (Patrons of the Old World II).",
+    "settings.ulricsson.name": "Ulricsson Endeavour",
+    "settings.ulricsson.hint": "Adds the endeavour granted by Diel Ulricsson (Patrons of the Old World II).",
+
     "WFRP4eEndeavours.NoToken": "You must select at least one PC token",
     "WFRP4eEndeavours.Request": "GM has requested Endeavours",
     "WFRP4eEndeavours.Endeavour.Label": "Choose an endeavour: ",
@@ -25,6 +40,17 @@
     "WFRP4eEndeavours.BA.Reputation": "Reputation (Academics, Burghers, Courtiers)",
     "WFRP4eEndeavours.BA.Research": "Research Lore (Academics)",
     "WFRP4eEndeavours.BA.Mark": "Study a Mark (Rogues)",
+    "WFRP4eEndeavours.BA.College": "College Research",
+    "WFRP4eEndeavours.BA.Patronage": "Patronage",
+    "WFRP4eEndeavours.BA.Penance": "Penance",
+    "WFRP4eEndeavours.BA.UnusualWeapon": "Train with Unusual Weapon",
+    "WFRP4eEndeavours.BA.MagicItem": "Test Magic Item",
+    "WFRP4eEndeavours.BA.Skaven": "A Study in Skaven",
+    "WFRP4eEndeavours.BA.Best": "Only the Best",
+    "WFRP4eEndeavours.BA.Hypotesis": "The Null Hypotesis",
+    "WFRP4eEndeavours.BA.Hedge": "Hedge School",
+    "WFRP4eEndeavours.BA.Visionaries": "No Use for Visionaries",
+    "WFRP4eEndeavours.BA.Witness": "Bear Witness",
     
     "WFRP4eEndeavours.Travel.Woodcraft": "Woodcraft",
     "WFRP4eEndeavours.Travel.Forage": "Forage",
@@ -59,7 +85,18 @@
     "WFRP4eEndeavours.Link.Practice": "Practice a Skill.",
     "WFRP4eEndeavours.Link.Recuperate": "Recuperate.",
     "WFRP4eEndeavours.Link.Camp": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Bl4HfC9PHexKcAxK]{Make Camp (Rest)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.0uAdenlQr0lK438e]{Make Camp (Heal)}",
-
+    "WFRP4eEndeavours.Link.College": "College Research.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.6w5TWRe30xs1PwmX]{College Research}",
+    "WFRP4eEndeavours.Link.Patronage": "Patronage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Tc4mUAG2DtdfdRaI]{Patronage}",
+    "WFRP4eEndeavours.Link.Penance": "Penance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.LtZXd1AtW9bP0qwq]{Penance}",
+    "WFRP4eEndeavours.Link.UnusualWeapon": "Train with Unusual Weapon.",
+    "WFRP4eEndeavours.Link.MagicItem": "Test Magic Item.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.ylLwAYTLTIFHA0Yw]{Test Magic Item}",
+    "WFRP4eEndeavours.Link.Skaven": "A Study in Skaven.",
+    "WFRP4eEndeavours.Link.Best": "Only the Best.",
+    "WFRP4eEndeavours.Link.Hypotesis": "The Null Hypotesis.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.HrkhcT4xbydE8X8c]{Resist Null}",
+    "WFRP4eEndeavours.Link.Hedge": "Hedge School.",
+    "WFRP4eEndeavours.Link.Visionaries": "No Use for Visionaries.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.VrMf6VMV5pBSMsil]{Foment Dissent with Rosendorn (Gossip)} and @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Q3jQInFQLCR4XSl0]{Foment Dissent with Rosendorn (Charm)} and @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.ZYiQGec6Gi6K85lz]{Rosendorn's Prophecy}",
+    "WFRP4eEndeavours.Link.Witness": "Bear Witness.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.9bLQ0KZgRwX0uZfN]{Bear Witness (Sigmar)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.wBGNR575OgLiOKad]{Bear Witness (Theology)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.dJZMhU1DKTmdvy8S]{Bear Witness (Intelligence)}",
+    
     "WFRP4eEndeavours.Title.Animal": " - Animal Training",
     "WFRP4eEndeavours.Title.Expert": " - Find an Expert",
     "WFRP4eEndeavours.Title.DissentCharm": " - Foment Dissent (Charm)",
@@ -72,6 +109,13 @@
     "WFRP4eEndeavours.Title.Watch": " - Keep Watch",
     "WFRP4eEndeavours.Title.CampRest": " - Make Camp (Rest)",
     "WFRP4eEndeavours.Title.CampHeal": " - Make Camp (Heal)",
+    "WFRP4eEndeavours.Title.College": " - College Research",
+    "WFRP4eEndeavours.Title.Patronage": " - Patronage",
+    "WFRP4eEndeavours.Title.Penance": " - Penance",
+    "WFRP4eEndeavours.Title.MagicItem": " - Test Magic Item",
+    "WFRP4eEndeavours.Title.Null": " - Resist Null",
+    "WFRP4eEndeavours.Title.Visionaries": " - Rosendorn's Prophecy",
+    "WFRP4eEndeavours.Title.Witness": " - Bear Witness",
 
     "WFRP4eEndeavours.Failure.AnimalDemigryph": "<p>Your demigryph needs more training.</p>",
     "WFRP4eEndeavours.Failure.AnimalDog": "<p>Your dog needs more training.</p>",
@@ -88,6 +132,13 @@
     "WFRP4eEndeavours.Failure.Information": "<p>Nobody is willing to tell you anything.</p>",
     "WFRP4eEndeavours.Failure.Watch": "<p>Pretty sure nobody is behind those bushes...</p>",
     "WFRP4eEndeavours.Failure.Camp": "<p>The camp isn't really so impressive...</p>",
+    "WFRP4eEndeavours.Failure.College": "<p>You must study harder.</p>",
+    "WFRP4eEndeavours.Failure.Patronage": "<p>You didn't choose a good play to patronize.</p>",
+    "WFRP4eEndeavours.Failure.Penance": "<p>Your god isn't happy with your penance. Gain one @Condition[Fatigued] Condition. If fumbled, roll in the @Table[wrath] instead.</p>",
+    "WFRP4eEndeavours.Failure.MagicItem": "<p>Your tests are unfruitful.</p>",
+    "WFRP4eEndeavours.Failure.Null": "<p>Some of Wilhelm's Null Trait has rubbed off on you.</p>",
+    "WFRP4eEndeavours.Failure.Visionaries": "<p>Rosendorn is struck by a terrible revelation about you which she absolutely refuses to share with you.</p>",
+    "WFRP4eEndeavours.Failure.Witness": "<p>You don't learn anything new from Ulricsson.</p>",
 
     "WFRP4eEndeavours.Success.AnimalDemigryph": "<p>Your demigryph learned a new trick! You can add a @Compendium[wfrp4e-core.traits.V0naR1YbYCl0KIxp] Creature Trait.</p>",
     "WFRP4eEndeavours.Success.AnimalDog": "<p>Your dog learned a new trick! You can add a @Compendium[wfrp4e-core.traits.V0naR1YbYCl0KIxp] Creature Trait.</p>",
@@ -105,10 +156,21 @@
     "WFRP4eEndeavours.Success.Watch": "<p>Nobody will surprise you in your watch!</p>",
     "WFRP4eEndeavours.Success.CampRest": "<p>This comfortable camp allows you to reduce Fatigued conditions from a character.</p>",
     "WFRP4eEndeavours.Success.CampHeal": "<p>This comfortable camp allows you to heal a character.</p>",
-
+    "WFRP4eEndeavours.Success.College": "<p>Studying in the College helps with your magic studies.</p>",
+    "WFRP4eEndeavours.Success.Patronage": "<p>You are a good patron of the arts.</p>",
+    "WFRP4eEndeavours.Success.Penance": "<p>Your god is moved by your penance. Removed 1 Sin Point, or 2 if you rolled +4 or more SL.</p>",
+    "WFRP4eEndeavours.Success.MagicItem": "<p>You reveal some of the item's secrets.</p>",
+    "WFRP4eEndeavours.Success.Null": "<p>All is going well... for now.</p>",
+    "WFRP4eEndeavours.Success.Visionaries": "<p>Rosendorn catches a glimpse of your immediate future.</p>",
+    "WFRP4eEndeavours.Success.Witness": "<p>Ulricsson's lessons teach you more about Sigmar's life, but maybe it's heresy?</p>",
+	
     "NAME.AnimalTrainingDemigryph":"Animal Training (Demigryph)",
     "NAME.AnimalTrainingDog":"Animal Training (Dog)",
     "NAME.AnimalTrainingHorse":"Animal Training (Horse)",
     "NAME.AnimalTrainingPegasus":"Animal Training (Pegasus)",
-    "NAME.AnimalTrainingPigeon":"Animal Training (Pigeon)"
+    "NAME.AnimalTrainingPigeon":"Animal Training (Pigeon)",
+    "NAME.EntertainProphecy":"Entertain (Prophecy)",
+    "NAME.LoreTheology":"Lore (Theology)",
+    "NAME.LoreSigmar":"Lore (Sigmar)",
+    "NAME.LoreIntelligence":"Lore (I don't have the skill)"
 }
