--- a/lang/es.json
+++ b/lang/es.json
@@ -1,4 +1,19 @@
 {
+    "settings.altdorf.name": "Empresas de Altdorf",
+    "settings.altdorf.hint": "A\u00F1ade las empresas incluidas en Altdorf: Crown of the Empire.",
+    "settings.shelley.name": "Empresa de Shelley",
+    "settings.shelley.hint": "A\u00F1ade la empresa concedida por Scealleah 'Shelley' Thorncobble (Patrons of the Old World I).",
+    "settings.farforian.name": "Empresa de Farforian",
+    "settings.farforian.hint": "A\u00F1ade la empresa concedida por Farforian Whiteshore (Patrons of the Old World I).",
+    "settings.willhelm.name": "Empresa de Willhelm",
+    "settings.willhelm.hint": "A\u00F1ade la empresa concedida por Willhelm von Vaulk (Patrons of the Old World II).",
+    "settings.angela.name": "Empresa de Angela",
+    "settings.angela.hint": "A\u00F1ade la empresa concedida por Angela Hedame (Patrons of the Old World II).",
+    "settings.rosendorn.name": "Empresa de Rosendorn",
+    "settings.rosendorn.hint": "A\u00F1ade la empresa concedida por Bryannah 'der Briek\u00E4se Rosendorn (Patrons of the Old World II).",
+    "settings.ulricsson.name": "Empresa de Ulricsson",
+    "settings.ulricsson.hint": "A\u00F1ade la empresa concedida por Diel Ulricsson (Patrons of the Old World II).",
+
     "WFRP4eEndeavours.NoToken": "Debes seleccionar al menos un icono de PJ",
     "WFRP4eEndeavours.Request": "El DJ ha pedido Empresas",
     "WFRP4eEndeavours.Endeavour.Label": "Escoge una empresa: ",
@@ -25,6 +40,17 @@
     "WFRP4eEndeavours.BA.Reputation": "Reputaci\u00F3n (Acad\u00E9micos, Burgueses, Cortesanos)",
     "WFRP4eEndeavours.BA.Research": "Investigar un saber (Acad\u00E9micos)",
     "WFRP4eEndeavours.BA.Mark": "Estudiar a una v\u00EDctima (P\u00EDcaros)",
+    "WFRP4eEndeavours.BA.College": "Investigaci\u00F3n en Colegio",
+    "WFRP4eEndeavours.BA.Patronage": "Patrocinio",
+    "WFRP4eEndeavours.BA.Penance": "Penitencia",
+    "WFRP4eEndeavours.BA.UnusualWeapon": "Entrenar con arma inusual",
+    "WFRP4eEndeavours.BA.MagicItem": "Probar objeto m\u00E1gico",
+    "WFRP4eEndeavours.BA.Skaven": "Estudio en skaven",
+    "WFRP4eEndeavours.BA.Best": "S\u00F3lo lo mejor",
+    "WFRP4eEndeavours.BA.Hypotesis": "La hip\u00F3tesis nula",
+    "WFRP4eEndeavours.BA.Hedge": "Escuela de adivinaci\u00F3n",
+    "WFRP4eEndeavours.BA.Visionaries": "Ning\u00FAn uso para los visionarios",
+    "WFRP4eEndeavours.BA.Witness": "Atestigua",
     
     "WFRP4eEndeavours.Travel.Woodcraft": "Conocimiento del bosque",
     "WFRP4eEndeavours.Travel.Forage": "Forrajear",
@@ -59,6 +85,17 @@
     "WFRP4eEndeavours.Link.Practice": "Practicar una habilidad.",
     "WFRP4eEndeavours.Link.Recuperate": "Recuperar.",
     "WFRP4eEndeavours.Link.Camp": "Acampar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Bl4HfC9PHexKcAxK]{Acampar (Descansar)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.0uAdenlQr0lK438e]{Acampar (Sanar)}",
+    "WFRP4eEndeavours.Link.College": "Investigaci\u00F3n en Colegio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.6w5TWRe30xs1PwmX]{Investigaci\u00F3n en Colegio}",
+    "WFRP4eEndeavours.Link.Patronage": "Patrocinio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Tc4mUAG2DtdfdRaI]{Patrocinio}",
+    "WFRP4eEndeavours.Link.Penance": "Penitencia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.LtZXd1AtW9bP0qwq]{Penitencia}",
+    "WFRP4eEndeavours.Link.UnusualWeapon": "Entrenar con arma inusual.",
+    "WFRP4eEndeavours.Link.MagicItem": "Probar objeto m\u00E1gico.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.ylLwAYTLTIFHA0Yw]{Probar objeto m\u00E1gico]",
+    "WFRP4eEndeavours.Link.Skaven": "Estudio en skaven.",
+    "WFRP4eEndeavours.Link.Best": "S\u00F3lo lo mejor.",
+    "WFRP4eEndeavours.Link.Hypotesis": "La hip\u00F3tesis nula.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.HrkhcT4xbydE8X8c]{Resistir Nulidad}",
+    "WFRP4eEndeavours.Link.Hedge": "Escuala de adivinaci\u00F3n.",
+    "WFRP4eEndeavours.Link.Visionaries": "Ning\u00FAn uso para los visionarios.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.VrMf6VMV5pBSMsil]{Fomentar la discordia con Rosendorn (Cotilleo)} y @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Q3jQInFQLCR4XSl0]{Fomentar la discordia con Rosendorn (Carisma)} y @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.ZYiQGec6Gi6K85lz]{La profec\u00EDa de Rosendorn}",
+    "WFRP4eEndeavours.Link.Witness": "Atestigua.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.9bLQ0KZgRwX0uZfN]{Atestigua (Sigmar)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.wBGNR575OgLiOKad]{Atestigua (Teolog\u00EDa)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.dJZMhU1DKTmdvy8S]{Atestigua (Inteligencia)}",
 
     "WFRP4eEndeavours.Title.Animal": " - Adiestrar animal",
     "WFRP4eEndeavours.Title.Expert": " - Encontar un experto",
@@ -72,6 +109,13 @@
     "WFRP4eEndeavours.Title.Watch": " - Montar guardia",
     "WFRP4eEndeavours.Title.CampRest": " - Acampar (Descansar)",
     "WFRP4eEndeavours.Title.CampHeal": " - Acampar (Sanar)",
+    "WFRP4eEndeavours.Title.College": " - Investigaci\u00F3n en Colegio",
+    "WFRP4eEndeavours.Title.Patronage": " - Patrocinio",
+    "WFRP4eEndeavours.Title.Penance": " - Penitencia",
+    "WFRP4eEndeavours.Title.MagicItem": " - Probar objeto m\u00E1gico",
+    "WFRP4eEndeavours.Title.Null": " - Resistir la Nulidad",
+    "WFRP4eEndeavours.Title.Visionaries": " - La profec\u00EDa de Rosendorn",
+    "WFRP4eEndeavours.Title.Witness": " - Atestigua",
 
     "WFRP4eEndeavours.Failure.AnimalDemigryph": "<p>Tu semigrifo necesita m\u00E1s entrenamiento.</p>",
     "WFRP4eEndeavours.Failure.AnimalDog": "<p>Tu perro necesita m\u00E1s entrenamiento.</p>",
@@ -88,6 +132,13 @@
     "WFRP4eEndeavours.Failure.Information": "<p>Nadie est\u00E1 dispuesto a contarte nada.</p>",
     "WFRP4eEndeavours.Failure.Watch": "<p>Seguro que no hay nadie tras esos arbustos...</p>",
     "WFRP4eEndeavours.Failure.Camp": "<p>El campamento no es nada impresionante...</p>",
+    "WFRP4eEndeavours.Failure.College": "<p>Debes estudiar m\u00E1s.</p>",
+    "WFRP4eEndeavours.Failure.Patronage": "<p>No escogiste una buena obra que patrocinar.</p>",
+    "WFRP4eEndeavours.Failure.Penance": "<p>Tu dios no est\u00E1 contento con tu penitencia. Gana un Estado de @Condition[Fatigado]. Si pifiaste, tira en la @Table[wrath] en su lugar.</p>",
+    "WFRP4eEndeavours.Failure.MagicItem": "<p>Tus pruebas son infructuosas.</p>",
+    "WFRP4eEndeavours.Failure.Null": "<p>Algo del Rasgo de Wilhelm Nulidad se te ha pegado.</p>",
+    "WFRP4eEndeavours.Failure.Visionaries": "<p>Rosendorn es golpeada por una terrible revelaci\u00F3n sobre ti, la cual se niega en redondo a compartir contigo.</p>",
+    "WFRP4eEndeavours.Failure.Witness": "<p>No aprendes nada nuevo de Ulricsson.</p>",
 
     "WFRP4eEndeavours.Success.AnimalDemigryph": "<p>\u00A1Tu semigrifo ha aprendido un nuevo truco! Puedes a\u00F1adir un Rasgo de Criatura @Compendium[wfrp4e-core.traits.V0naR1YbYCl0KIxp].</p>",
     "WFRP4eEndeavours.Success.AnimalDog": "<p>\u00A1Tu perro ha aprendido un nuevo truco! Puedes a\u00F1adir un Rasgo de Criatura @Compendium[wfrp4e-core.traits.V0naR1YbYCl0KIxp].</p>",
@@ -105,10 +156,21 @@
     "WFRP4eEndeavours.Success.Watch": "<p>\u00A1Nadie os sorprender\u00E1 durante tu guardia!</p>",
     "WFRP4eEndeavours.Success.CampRest": "<p>Este c\u00F3modo campamento os permite reducir los estados de Fatigado de un personaje.</p>",
     "WFRP4eEndeavours.Success.CampHeal": "<p>Este c\u00F3modo campamento os permite sanar a un personaje.</p>",
+    "WFRP4eEndeavours.Success.College": "<p>Estudiar en el Colegio ayuda con tus estudios m\u00E1gicos.</p>",
+    "WFRP4eEndeavours.Success.Patronage": "<p>Eres un buen patr\u00F3n de las artes.</p>",
+    "WFRP4eEndeavours.Success.Penance": "<p>Tu dios est\u00E1 conmovido por tu penitencia. Quitado 1 Punto de Pecado, o 2 si sacaste +4 o m\u00E1s NE.</p>",
+    "WFRP4eEndeavours.Success.MagicItem": "<p>Revelas algunos de los secretos del objeto.</p>",
+    "WFRP4eEndeavours.Success.Null": "<p>Todo va bien... de momento.</p>",
+    "WFRP4eEndeavours.Success.Visionaries": "<p>Rosendorn atisba un retazo de tu futuro inmediato.</p>",
+    "WFRP4eEndeavours.Success.Witness": "<p>Las lecciones de Ulricsson te ense\u00F1an m\u00E1s sobre la vida de Sigmar, \u00BFpero quiz\u00E1 es una herej\u00EDa?</p>",
 
     "NAME.AnimalTrainingDemigryph": "Adiestrar animal (Semigrifo)",
     "NAME.AnimalTrainingDog": "Adiestrar animal (Perro)",
     "NAME.AnimalTrainingHorse": "Adiestrar animal (Caballo)",
     "NAME.AnimalTrainingPegasus": "Adiestrar animal (Pegaso)",
-    "NAME.AnimalTrainingPigeon": "Adiestrar animal (Paloma)"
+    "NAME.AnimalTrainingPigeon": "Adiestrar animal (Paloma)",
+    "NAME.EntertainProphecy":"Animar (Profec\u00EDa)",
+    "NAME.LoreTheology":"Sabidur\u00EDa acad\u00E9mica (Teolog\u00EDa)",
+    "NAME.LoreSigmar":"Sabidur\u00EDa acad\u00E9mica (Sigmar)",
+    "NAME.LoreIntelligence":"Sabidur\u00EDa acad\u00E9mica (No tengo la habilidad)"
 }
