Added Extra Endeavours

--- a/lang/en.json
+++ b/lang/en.json
@@ -171,6 +171,5 @@
     "NAME.AnimalTrainingPigeon":"Animal Training (Pigeon)",
     "NAME.EntertainProphecy":"Entertain (Prophecy)",
     "NAME.LoreTheology":"Lore (Theology)",
-    "NAME.LoreSigmar":"Lore (Sigmar)",
-    "NAME.LoreIntelligence":"Lore (I don't have the skill)"
+    "NAME.LoreSigmar":"Lore (Sigmar)"
 }
