--- a/lang/es.json
+++ b/lang/es.json
@@ -171,6 +171,5 @@
     "NAME.AnimalTrainingPigeon": "Adiestrar animal (Paloma)",
     "NAME.EntertainProphecy":"Animar (Profec\u00EDa)",
     "NAME.LoreTheology":"Sabidur\u00EDa acad\u00E9mica (Teolog\u00EDa)",
-    "NAME.LoreSigmar":"Sabidur\u00EDa acad\u00E9mica (Sigmar)",
-    "NAME.LoreIntelligence":"Sabidur\u00EDa acad\u00E9mica (No tengo la habilidad)"
+    "NAME.LoreSigmar":"Sabidur\u00EDa acad\u00E9mica (Sigmar)"
 }
