UiA, WoM and SoC Endeavours

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,12 @@
 {
     "settings.altdorf.name": "Altdorf Endeavours",
     "settings.altdorf.hint": "Adds the endeavours included in Altdorf: Crown of the Empire.",
+    "settings.uia.name": "Up in Arms Endeavours",
+    "settings.uia.hint": "Adds the endeavours for warriors included in Up in Arms.",
+    "settings.wom.name": "Winds of Magic Endeavours",
+    "settings.wom.hint": "Adds the arcane endeavours included in Winds of Magic.",
+    "settings.soc.name": "Sea of Claws Endeavours",
+    "settings.soc.hint": "Replace all between adventures endeavours with the ones listed in Sea of Claws. If Up in Arms Endeavours is enabled, the available ones will be added",
     "settings.shelley.name": "Shelley Endeavour",
     "settings.shelley.hint": "Adds the endeavour granted by Scealleah 'Shelley' Thorncobble (Patrons of the Old World I).",
     "settings.farforian.name": "Farforian Endeavour",
@@ -45,6 +51,19 @@
     "WFRP4eEndeavours.BA.Penance": "Penance",
     "WFRP4eEndeavours.BA.UnusualWeapon": "Train with Unusual Weapon",
     "WFRP4eEndeavours.BA.MagicItem": "Test Magic Item",
+    "WFRP4eEndeavours.BA.Alcatini": "Alcatini Method (Warriors, must have Drilled (2))",
+    "WFRP4eEndeavours.BA.Punchausen": "Count Punchausen's Narrative Auction (Warriors)",
+    "WFRP4eEndeavours.BA.Fanmaris": "Fanmaris's Perfect Shot (Warriors)",
+    "WFRP4eEndeavours.BA.Leitdorf": "The Leitdorf Defence (Warriors)",
+    "WFRP4eEndeavours.BA.Quartermaster": "The Quartermaster Shuffle (Warriors)",
+    "WFRP4eEndeavours.BA.Brew": "Brew Potion",
+    "WFRP4eEndeavours.BA.Ingredients": "Gather Ingredients",
+    "WFRP4eEndeavours.BA.Familiar": "Improve Familiar",
+    "WFRP4eEndeavours.BA.Ritual": "Perform Ritual",
+    "WFRP4eEndeavours.BA.Mapmaking": "Mapmaking",
+    "WFRP4eEndeavours.BA.Trade": "Opportune Trade",
+    "WFRP4eEndeavours.BA.Ship": "Ship Maintenance",
+    "WFRP4eEndeavours.BA.Crew": "Train Crew",
     "WFRP4eEndeavours.BA.Skaven": "A Study in Skaven",
     "WFRP4eEndeavours.BA.Best": "Only the Best",
     "WFRP4eEndeavours.BA.Hypotesis": "The Null Hypotesis",
@@ -90,6 +109,19 @@
     "WFRP4eEndeavours.Link.Penance": "Penance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.LtZXd1AtW9bP0qwq]{Penance}",
     "WFRP4eEndeavours.Link.UnusualWeapon": "Train with Unusual Weapon.",
     "WFRP4eEndeavours.Link.MagicItem": "Test Magic Item.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.ylLwAYTLTIFHA0Yw]{Test Magic Item}",
+    "WFRP4eEndeavours.Link.Alcatini": "Alcatini Method.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.83QgU78rUIFABQsF]{Alcatini Method}",
+    "WFRP4eEndeavours.Link.Punchausen": "Count Punchausen's Narrative Auction.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.aDttKH3qyNCR6iGf]{Count Punchausen's Narrative Auction (Charm)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.pS2Key5geZSz6Wn0]{Count Punchausen's Narrative Auction (Entertain)}",
+    "WFRP4eEndeavours.Link.Fanmaris": "Fanmaris's Perfect Shot.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.zXFw4YVj4nXE7Zet]{Fanmaris's Perfect Shot}",
+    "WFRP4eEndeavours.Link.Leitdorf": "The Leitdorf Defence.",
+    "WFRP4eEndeavours.Link.Quartermaster": "The Quartermaster Shuffle.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.RFeMoXNQ6qpYPwgG]{Find a Job}",
+    "WFRP4eEndeavours.Link.Brew": "Brew Potion.",
+    "WFRP4eEndeavours.Link.Ingredients": "Gather Ingredients.",
+    "WFRP4eEndeavours.Link.Familiar": "Improve Familiar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.m8x4xAhvCFrBYcmB]{Improve Familiar}",
+    "WFRP4eEndeavours.Link.Ritual": "Perform Ritual.",
+    "WFRP4eEndeavours.Link.Mapmaking": "Mapmaking.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.kkZVd242H3PYmgiq]{Mapmaking}",
+    "WFRP4eEndeavours.Link.Trade": "Opportune Trade.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.5Hm6KR2gxcZAyZML]{Opportune Trade}",
+    "WFRP4eEndeavours.Link.Ship": "Ship Maintenance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.RAhGd9iU42ugyzTB]{Ship Maintenance (Boatbuilder)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.6PIkSbxFLwCM9tkA]{Ship Maintenance (Carpenter)}",
+    "WFRP4eEndeavours.Link.Crew": "Train Crew.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.M0E7H5NukVRD734B]{Train Crew}",
     "WFRP4eEndeavours.Link.Skaven": "A Study in Skaven.",
     "WFRP4eEndeavours.Link.Best": "Only the Best.",
     "WFRP4eEndeavours.Link.Hypotesis": "The Null Hypotesis.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.HrkhcT4xbydE8X8c]{Resist Null}",
@@ -113,6 +145,15 @@
     "WFRP4eEndeavours.Title.Patronage": " - Patronage",
     "WFRP4eEndeavours.Title.Penance": " - Penance",
     "WFRP4eEndeavours.Title.MagicItem": " - Test Magic Item",
+    "WFRP4eEndeavours.Title.Alcatini": " - Alcatini Method",
+    "WFRP4eEndeavours.Title.Punchausen": " - Count Punchausen's Narrative Auction",
+    "WFRP4eEndeavours.Title.Fanmaris": " - Fanmaris's Perfect Shot",
+    "WFRP4eEndeavours.Title.Job": " - Find a Job",
+    "WFRP4eEndeavours.Title.Familiar": " - Improve Familiar",
+    "WFRP4eEndeavours.Title.Mapmaking": " - Mapmaking",
+    "WFRP4eEndeavours.Title.Trade": " - Opportune Trade",
+    "WFRP4eEndeavours.Title.Ship": " - Ship Maintenance",
+    "WFRP4eEndeavours.Title.Crew": " - Train Crew",
     "WFRP4eEndeavours.Title.Null": " - Resist Null",
     "WFRP4eEndeavours.Title.Visionaries": " - Rosendorn's Prophecy",
     "WFRP4eEndeavours.Title.Witness": " - Bear Witness",
@@ -136,6 +177,15 @@
     "WFRP4eEndeavours.Failure.Patronage": "<p>You didn't choose a good play to patronize.</p>",
     "WFRP4eEndeavours.Failure.Penance": "<p>Your god isn't happy with your penance. Gain one @Condition[Fatigued] Condition. If fumbled, roll in the @Table[wrath] instead.</p>",
     "WFRP4eEndeavours.Failure.MagicItem": "<p>Your tests are unfruitful.</p>",
+    "WFRP4eEndeavours.Failure.Alcatini": "<p>Your companions don't learn anything from you.</p>",
+    "WFRP4eEndeavours.Failure.Punchausen": "<p>Your stories are not so entertaining.</p>",
+    "WFRP4eEndeavours.Failure.Fanmaris": "<p>You need more training.</p>",
+    "WFRP4eEndeavours.Failure.Job": "<p>Your old associates don't know of a job that can help you.</p>",
+    "WFRP4eEndeavours.Failure.Familiar": "<p>You aren't able to improve your familiar... yet.</p>",
+    "WFRP4eEndeavours.Failure.Mapmaking": "<p>You need to work more on your map.</p>",
+    "WFRP4eEndeavours.Failure.Trade": "<p>You thought you had a profitable business at hand... Reality tought otherwise.</p>",
+    "WFRP4eEndeavours.Failure.Ship": "<p>Your ship needs more maintenance work.</p>",
+    "WFRP4eEndeavours.Failure.Crew": "<p>Those landlubbers will never learn...</p>",
     "WFRP4eEndeavours.Failure.Null": "<p>Some of Wilhelm's Null Trait has rubbed off on you.</p>",
     "WFRP4eEndeavours.Failure.Visionaries": "<p>Rosendorn is struck by a terrible revelation about you which she absolutely refuses to share with you.</p>",
     "WFRP4eEndeavours.Failure.Witness": "<p>You don't learn anything new from Ulricsson.</p>",
@@ -160,6 +210,15 @@
     "WFRP4eEndeavours.Success.Patronage": "<p>You are a good patron of the arts.</p>",
     "WFRP4eEndeavours.Success.Penance": "<p>Your god is moved by your penance. Removed 1 Sin Point, or 2 if you rolled +4 or more SL.</p>",
     "WFRP4eEndeavours.Success.MagicItem": "<p>You reveal some of the item's secrets.</p>",
+    "WFRP4eEndeavours.Success.Alcatini": "<p>Your shouting, threats, speeches, alcohol and bribery make effect! One or more companions gain or enhance the @UUID[Compendium.wfrp4e-core.talents.J9MK0AIaTbvd5oF6]{Drilled} Talent.</p>",
+    "WFRP4eEndeavours.Success.Punchausen": "<p>Your stories are printed and you are paid [[2d10]] @UUID[Compendium.wfrp4e-core.trappings.KB8HgDz56dh2w7w1]{silver shillings}.</p>",
+    "WFRP4eEndeavours.Success.Fanmaris": "<p>You're ready for the perfect shot.</p>",
+    "WFRP4eEndeavours.Success.Job": "<p>An old associate knows about a suitable job.</p>",
+    "WFRP4eEndeavours.Success.Familiar": "<p>Your familiar has a chance to improve!</p>",
+    "WFRP4eEndeavours.Success.Mapmaking": "<p>You created a beautiful and accurate map.</p>",
+    "WFRP4eEndeavours.Success.Trade": "<p>You thought you had a profitable business at hand... and were right!</p>",
+    "WFRP4eEndeavours.Success.Ship": "<p>Your ship is starting to look like it's former self.</p>",
+    "WFRP4eEndeavours.Success.Crew": "<p>You've got a crew to be proud of.</p>",
     "WFRP4eEndeavours.Success.Null": "<p>All is going well... for now.</p>",
     "WFRP4eEndeavours.Success.Visionaries": "<p>Rosendorn catches a glimpse of your immediate future.</p>",
     "WFRP4eEndeavours.Success.Witness": "<p>Ulricsson's lessons teach you more about Sigmar's life, but maybe it's heresy?</p>",
@@ -170,6 +229,11 @@
     "NAME.AnimalTrainingPegasus":"Animal Training (Pegasus)",
     "NAME.AnimalTrainingPigeon":"Animal Training (Pigeon)",
     "NAME.EntertainProphecy":"Entertain (Prophecy)",
+    "NAME.EntertainStorytelling":"Entertain (Storytelling)",
+    "NAME.RangedBow":"Ranged (Bow)",
+    "NAME.TradeCartographer":"Trade (Cartographer)",
+    "NAME.TradeBoatbuilder":"Trade (Boatbuilder)",
+    "NAME.TradeCarpenter":"Trade (Carpenter)",
     "NAME.LoreTheology":"Lore (Theology)",
     "NAME.LoreSigmar":"Lore (Sigmar)"
 }
