--- a/lang/es.json
+++ b/lang/es.json
@@ -1,6 +1,12 @@
 {
     "settings.altdorf.name": "Empresas de Altdorf",
     "settings.altdorf.hint": "A\u00F1ade las empresas incluidas en Altdorf: Crown of the Empire.",
+    "settings.uia.name": "Empresas de Up in Arms",
+    "settings.uia.hint": "A\u00F1ade las empresas para guerreros incluidas en Up in Arms.",
+    "settings.wom.name": "Empresas de Winds of Magic",
+    "settings.wom.hint": "A\u00F1ade las empresas arcanas incluidas en Winds of Magic.",
+    "settings.soc.name": "Empresas de Sea of Claws",
+    "settings.soc.hint": "Reemplaza todas las empresas de entre aventuras con las listadas en Sea of Claws. Si las Empresas de Up in Arms est\u00E1n activadas, se a\u00F1adir\u00E1n las disponibles.",
     "settings.shelley.name": "Empresa de Shelley",
     "settings.shelley.hint": "A\u00F1ade la empresa concedida por Scealleah 'Shelley' Thorncobble (Patrons of the Old World I).",
     "settings.farforian.name": "Empresa de Farforian",
@@ -45,6 +51,19 @@
     "WFRP4eEndeavours.BA.Penance": "Penitencia",
     "WFRP4eEndeavours.BA.UnusualWeapon": "Entrenar con arma inusual",
     "WFRP4eEndeavours.BA.MagicItem": "Probar objeto m\u00E1gico",
+    "WFRP4eEndeavours.BA.Alcatini": "M\u00E9todo Alcatini (Guerreros, obligtorio Entrenado (2))",
+    "WFRP4eEndeavours.BA.Punchausen": "Subasta narrativa del Conde Punchausen (Guerreros)",
+    "WFRP4eEndeavours.BA.Fanmaris": "El disparo perfecto de Fanmaris (Guerreros)",
+    "WFRP4eEndeavours.BA.Leitdorf": "La defensa Leitdorf (Guerreros)",
+    "WFRP4eEndeavours.BA.Quartermaster": "Lo que el intendente traspapel\u00F3 (Guerreros)",
+    "WFRP4eEndeavours.BA.Brew": "Preparar poci\u00F3n",
+    "WFRP4eEndeavours.BA.Ingredients": "Reunir ingredientes",
+    "WFRP4eEndeavours.BA.Familiar": "Mejorar familiar",
+    "WFRP4eEndeavours.BA.Ritual": "Realizar ritual",
+    "WFRP4eEndeavours.BA.Mapmaking": "Creaci\u00F3n de mapas",
+    "WFRP4eEndeavours.BA.Trade": "Comercio oportuno",
+    "WFRP4eEndeavours.BA.Ship": "Mantenimiento del barco",
+    "WFRP4eEndeavours.BA.Crew": "Entrenar tripulaci\u00F3n",
     "WFRP4eEndeavours.BA.Skaven": "Estudio en skaven",
     "WFRP4eEndeavours.BA.Best": "S\u00F3lo lo mejor",
     "WFRP4eEndeavours.BA.Hypotesis": "La hip\u00F3tesis nula",
@@ -90,6 +109,19 @@
     "WFRP4eEndeavours.Link.Penance": "Penitencia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.LtZXd1AtW9bP0qwq]{Penitencia}",
     "WFRP4eEndeavours.Link.UnusualWeapon": "Entrenar con arma inusual.",
     "WFRP4eEndeavours.Link.MagicItem": "Probar objeto m\u00E1gico.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.ylLwAYTLTIFHA0Yw]{Probar objeto m\u00E1gico]",
+    "WFRP4eEndeavours.Link.Alcatini": "M\u00E9todo Alcatini.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.83QgU78rUIFABQsF]{M\u00E9todo Alcatini}",
+    "WFRP4eEndeavours.Link.Punchausen": "Subasta narrativa del Conde Punchausen.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.aDttKH3qyNCR6iGf]{Subasta narrativa del Conde Punchausen (Carisma)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.pS2Key5geZSz6Wn0]{Subasta narrativa del Conde Punchausen (Animar)}",
+    "WFRP4eEndeavours.Link.Fanmaris": "El disparo perfecto de Fanmaris.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.zXFw4YVj4nXE7Zet]{El disparo perfecto de Fanmaris}",
+    "WFRP4eEndeavours.Link.Leitdorf": "La defensa Leitdorf.",
+    "WFRP4eEndeavours.Link.Quartermaster": "Lo que el intendente traspapel\u00F3.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.RFeMoXNQ6qpYPwgG]{Encontrar un trabajo}",
+    "WFRP4eEndeavours.Link.Brew": "Preparar poci\u00F3n.",
+    "WFRP4eEndeavours.Link.Ingredients": "Reunir ingredientes.",
+    "WFRP4eEndeavours.Link.Familiar": "Mejorar familiar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.m8x4xAhvCFrBYcmB]{Mejorar familiar}",
+    "WFRP4eEndeavours.Link.Ritual": "Realizar ritual.",
+    "WFRP4eEndeavours.Link.Mapmaking": "Creaci\u00F3n de mapas.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.kkZVd242H3PYmgiq]{Creaci\u00F3n de mapas}",
+    "WFRP4eEndeavours.Link.Trade": "Comercio oportuno.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.5Hm6KR2gxcZAyZML]{Comercio oportuno}",
+    "WFRP4eEndeavours.Link.Ship": "Mantenimiento del barco.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.RAhGd9iU42ugyzTB]{Mantenimiento del barco (Constructor de barcos)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.6PIkSbxFLwCM9tkA]{Mantenimiento del barco (Carpintero)}",
+    "WFRP4eEndeavours.Link.Crew": "Entrenar tripulaci\u00F3n.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.M0E7H5NukVRD734B]{Entrenar tripulaci\u00F3n}",
     "WFRP4eEndeavours.Link.Skaven": "Estudio en skaven.",
     "WFRP4eEndeavours.Link.Best": "S\u00F3lo lo mejor.",
     "WFRP4eEndeavours.Link.Hypotesis": "La hip\u00F3tesis nula.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.HrkhcT4xbydE8X8c]{Resistir Nulidad}",
@@ -113,6 +145,15 @@
     "WFRP4eEndeavours.Title.Patronage": " - Patrocinio",
     "WFRP4eEndeavours.Title.Penance": " - Penitencia",
     "WFRP4eEndeavours.Title.MagicItem": " - Probar objeto m\u00E1gico",
+    "WFRP4eEndeavours.Title.Alcatini": " - M\u00E9todo Alcatini",
+    "WFRP4eEndeavours.Title.Punchausen": " - Subasta narrativa del Conde Punchausen",
+    "WFRP4eEndeavours.Title.Fanmaris": " - El disparo perfecto de Fanmaris",
+    "WFRP4eEndeavours.Title.Job": " - Encontrar un trabajo",
+    "WFRP4eEndeavours.Title.Familiar": " - Mejorar familiar",
+    "WFRP4eEndeavours.Title.Mapmaking": " - Creaci\u00F3n de mapas",
+    "WFRP4eEndeavours.Title.Trade": " - Comercio oportuno",
+    "WFRP4eEndeavours.Title.Ship": " - Mantenimiento del barco",
+    "WFRP4eEndeavours.Title.Crew": " - Entrenar tripulaci\u00F3n",
     "WFRP4eEndeavours.Title.Null": " - Resistir la Nulidad",
     "WFRP4eEndeavours.Title.Visionaries": " - La profec\u00EDa de Rosendorn",
     "WFRP4eEndeavours.Title.Witness": " - Atestigua",
@@ -136,6 +177,15 @@
     "WFRP4eEndeavours.Failure.Patronage": "<p>No escogiste una buena obra que patrocinar.</p>",
     "WFRP4eEndeavours.Failure.Penance": "<p>Tu dios no est\u00E1 contento con tu penitencia. Gana un Estado de @Condition[Fatigado]. Si pifiaste, tira en la @Table[wrath] en su lugar.</p>",
     "WFRP4eEndeavours.Failure.MagicItem": "<p>Tus pruebas son infructuosas.</p>",
+    "WFRP4eEndeavours.Failure.Alcatini": "<p>Tus compa\u00F1eros no aprenden nada de ti.</p>",
+    "WFRP4eEndeavours.Failure.Punchausen": "<p>Tus historias no son tan interesantes.</p>",
+    "WFRP4eEndeavours.Failure.Fanmaris": "<p>Necesitas m\u00E1s entrenamiento.</p>",
+    "WFRP4eEndeavours.Failure.Job": "<p>Tus antiguos socios no saben de ning\u00FAn trabajo que pueda ayudarte.</p>",
+    "WFRP4eEndeavours.Failure.Familiar": "<p>Eres incapaz de mejorar tu familiar... a\u00FAn.</p>",
+    "WFRP4eEndeavours.Failure.Mapmaking": "<p>Necesitas trabajar m\u00E1s en tu mapa.</p>",
+    "WFRP4eEndeavours.Failure.Trade": "<p>Cre\u00EDas tener un negocio lucrativo entre manos... La realidad cre\u00EDa otra cosa.</p>",
+    "WFRP4eEndeavours.Failure.Ship": "<p>Tu barco necesita m\u00E1s trabajo de mantenimiento.</p>",
+    "WFRP4eEndeavours.Failure.Crew": "<p>Esos marineros de agua dulce nunca aprender\u00E1n...</p>",
     "WFRP4eEndeavours.Failure.Null": "<p>Algo del Rasgo de Wilhelm Nulidad se te ha pegado.</p>",
     "WFRP4eEndeavours.Failure.Visionaries": "<p>Rosendorn es golpeada por una terrible revelaci\u00F3n sobre ti, la cual se niega en redondo a compartir contigo.</p>",
     "WFRP4eEndeavours.Failure.Witness": "<p>No aprendes nada nuevo de Ulricsson.</p>",
@@ -160,6 +210,15 @@
     "WFRP4eEndeavours.Success.Patronage": "<p>Eres un buen patr\u00F3n de las artes.</p>",
     "WFRP4eEndeavours.Success.Penance": "<p>Tu dios est\u00E1 conmovido por tu penitencia. Quitado 1 Punto de Pecado, o 2 si sacaste +4 o m\u00E1s NE.</p>",
     "WFRP4eEndeavours.Success.MagicItem": "<p>Revelas algunos de los secretos del objeto.</p>",
+    "WFRP4eEndeavours.Success.Alcatini": "<p>\u00A1Tus gritos, amenzas, discursos, alcohol y sobornos surgen efecto! Uno o m\u00E1s de tus compa\u00F1eros ganan o mejoran el Talento @UUID[Compendium.wfrp4e-core.talents.J9MK0AIaTbvd5oF6]{Entrenado}.</p>",
+    "WFRP4eEndeavours.Success.Punchausen": "<p>Tus historia se imprimen y te pagan [[2d10]] @UUID[Compendium.wfrp4e-core.trappings.KB8HgDz56dh2w7w1]{chelines de plata}.</p>",
+    "WFRP4eEndeavours.Success.Fanmaris": "<p>Est\u00E1s preparado para el disparo perfecto.</p>",
+    "WFRP4eEndeavours.Success.Job": "<p>Un antiguo socio sabe de un trabajo adecuado.</p>",
+    "WFRP4eEndeavours.Success.Familiar": "<p>\u00A1Tu familiar tiene una oportunidad para mejorar!</p>",
+    "WFRP4eEndeavours.Success.Mapmaking": "<p>Has creado un bello y preciso mapa.</p>",
+    "WFRP4eEndeavours.Success.Trade": "<p>Cre\u00EDas tener un negocio lucrativo entre manos... \u00A1y ten\u00EDas raz\u00F3n!</p>",
+    "WFRP4eEndeavours.Success.Ship": "<p>Tu barco empieza a parecerse a su antiguo ser.</p>",
+    "WFRP4eEndeavours.Success.Crew": "<p>You've got a crew to be proud of.</p>",
     "WFRP4eEndeavours.Success.Null": "<p>Todo va bien... de momento.</p>",
     "WFRP4eEndeavours.Success.Visionaries": "<p>Rosendorn atisba un retazo de tu futuro inmediato.</p>",
     "WFRP4eEndeavours.Success.Witness": "<p>Las lecciones de Ulricsson te ense\u00F1an m\u00E1s sobre la vida de Sigmar, \u00BFpero quiz\u00E1 es una herej\u00EDa?</p>",
@@ -170,6 +229,11 @@
     "NAME.AnimalTrainingPegasus": "Adiestrar animal (Pegaso)",
     "NAME.AnimalTrainingPigeon": "Adiestrar animal (Paloma)",
     "NAME.EntertainProphecy":"Animar (Profec\u00EDa)",
+    "NAME.EntertainStorytelling":"Animar (Relatar)",
+    "NAME.RangedBow":"A distancia (Arco)",
+    "NAME.TradeCartographer":"Oficio (Cart\u00F3grafo)",
+    "NAME.TradeBoatbuilder":"Oficio (Constructor de botes)",
+    "NAME.TradeCarpenter":"Oficio (Carpintero)",
     "NAME.LoreTheology":"Sabidur\u00EDa acad\u00E9mica (Teolog\u00EDa)",
     "NAME.LoreSigmar":"Sabidur\u00EDa acad\u00E9mica (Sigmar)"
 }
