--- a/lang/es.json
+++ b/lang/es.json
@@ -7,6 +7,8 @@
     "settings.wom.hint": "A\u00F1ade las empresas arcanas incluidas en Winds of Magic.",
     "settings.soc.name": "Empresas de Sea of Claws",
     "settings.soc.hint": "Reemplaza todas las empresas de entre aventuras con las listadas en Sea of Claws. Si las Empresas de Up in Arms est\u00E1n activadas, se a\u00F1adir\u00E1n las disponibles.",
+    "settings.lustria.name": "Empresas de Lustria",
+    "settings.lustria.hint": "A\u00F1ade las empresas entre aventuras lustrianas y reemplaza todas las empresas de viaje con los listadas en Lustria.",
     "settings.shelley.name": "Empresa de Shelley",
     "settings.shelley.hint": "A\u00F1ade la empresa concedida por Scealleah 'Shelley' Thorncobble (Patrons of the Old World I).",
     "settings.farforian.name": "Empresa de Farforian",
@@ -64,6 +66,14 @@
     "WFRP4eEndeavours.BA.Trade": "Comercio oportuno",
     "WFRP4eEndeavours.BA.Ship": "Mantenimiento del barco",
     "WFRP4eEndeavours.BA.Crew": "Entrenar tripulaci\u00F3n",
+    "WFRP4eEndeavours.BA.Deforestation": "Deforestaci\u00F3n",
+    "WFRP4eEndeavours.BA.Ancients": "Sintonizar con los Antiguos (Requiere Monumento)",
+    "WFRP4eEndeavours.BA.Boatbuilding": "Construcci\u00F3n de barcos (Requiere Puerto)",
+    "WFRP4eEndeavours.BA.Construction": "Construcci\u00F3n (Puede tener requisitos)",
+    "WFRP4eEndeavours.BA.Entertaining": "Animar (Requiere Recinto)",
+    "WFRP4eEndeavours.BA.Border": "Patrullar la frontera (Requiere Fortificaci\u00F3n)",
+    "WFRP4eEndeavours.BA.Rationing": "Racionar (Requiere Granja)",
+    "WFRP4eEndeavours.BA.Expedition": "Patrocinar una expedici\u00F3n (Requiere Capitolio)",
     "WFRP4eEndeavours.BA.Skaven": "Estudio en skaven",
     "WFRP4eEndeavours.BA.Best": "S\u00F3lo lo mejor",
     "WFRP4eEndeavours.BA.Hypotesis": "La hip\u00F3tesis nula",
@@ -79,6 +89,9 @@
     "WFRP4eEndeavours.Travel.Practice": "Practicar una habilidad",
     "WFRP4eEndeavours.Travel.Recuperate": "Recuperar",
     "WFRP4eEndeavours.Travel.Camp": "Acampar",
+    "WFRP4eEndeavours.Travel.Shelter": "Encontrar refugio",
+    "WFRP4eEndeavours.Travel.ForageforFood": "Forrajear comida",
+    "WFRP4eEndeavours.Travel.Boat": "Reparar un barco",
     
     "WFRP4eEndeavours.Link.Animal": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WQQk92GoGp7fRH89]{Adiestrar animal}.</b></h3>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.n7sByqBJtLN2E2Of]{Adiestrar animal (Caballo)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.8DoSS6o6tKczwBOD]{Adiestrar animal (Paloma)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.5aAOdvSVsKFiDLZj]{Adiestrar animal (Pegaso)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.MOq6Dd5wvXqpRLCW]{Adiestrar animal (Perro)} o <p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.9mIhYiuhgKVuWiAF]{Adiestrar animal (Semigrifo)}",
     "WFRP4eEndeavours.Link.Banking": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.OqE6vzTEebofbX92]{Actividades bancarias}.",
@@ -122,6 +135,21 @@
     "WFRP4eEndeavours.Link.Trade": "Comercio oportuno.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.5Hm6KR2gxcZAyZML]{Comercio oportuno}",
     "WFRP4eEndeavours.Link.Ship": "Mantenimiento del barco.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.RAhGd9iU42ugyzTB]{Mantenimiento del barco (Constructor de barcos)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.6PIkSbxFLwCM9tkA]{Mantenimiento del barco (Carpintero)}",
     "WFRP4eEndeavours.Link.Crew": "Entrenar tripulaci\u00F3n.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.M0E7H5NukVRD734B]{Entrenar tripulaci\u00F3n}",
+    "WFRP4eEndeavours.Link.Deforestation": "Deforestaci\u00F3n.</b></h3><p>Quiz\u00E1s @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.gNUdm6x4ko6L4BJg]{Dobles turnos} y/o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Z3IVWcZ3BesTlXWV]{Liderar le\u00F1adores}",
+    "WFRP4eEndeavours.Link.Ancients": "Sintonizar con los Antiguos.",
+    "WFRP4eEndeavours.Link.Boatbuilding": "Construcci\u00F3n de barcos.",
+    "WFRP4eEndeavours.Link.Construction": "Construcci\u00F3n.",
+    "WFRP4eEndeavours.Link.Entertaining": "Animar.",
+    "WFRP4eEndeavours.Link.Border": "Patrullar la frontera.",
+    "WFRP4eEndeavours.Link.Rationing": "Racionar.",
+    "WFRP4eEndeavours.Link.Expedition": "Patrocinar una expedici\u00F3n.",
+    "WFRP4eEndeavours.Link.Shelter": "Encontrar refugio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.bIXQJZBEaL5iziDm]{Encontrar refugio}",
+    "WFRP4eEndeavours.Link.ForageforFood": "Forrajear comida.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.uwUjherl2lz7eQzJ]{Forrajear comida}",
+    "WFRP4eEndeavours.Link.WatchLustria": "Montar guardia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.vVyunkd81fwidcia]{Montar guardia}",
+    "WFRP4eEndeavours.Link.MapLustria": "Trazar la ruta.",
+    "WFRP4eEndeavours.Link.PracticeLustria": "Practicar una habilidad.",
+    "WFRP4eEndeavours.Link.CampLustria": "Acampar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.yIa61a3wdrpyYJVg]{Acampar (Descansar)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.8m5LbpBAEO6PFrzD]{Acampar (Sanar)}",
+    "WFRP4eEndeavours.Link.Boat": "Reparar un barco.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.kgbyWNs5nzPmSKZn]{Reparar un barco (Constructor de barcos)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.1vLRKb4gC2CgWxaO]{Reparar un barco (Carpintero)}",
     "WFRP4eEndeavours.Link.Skaven": "Estudio en skaven.",
     "WFRP4eEndeavours.Link.Best": "S\u00F3lo lo mejor.",
     "WFRP4eEndeavours.Link.Hypotesis": "La hip\u00F3tesis nula.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.HrkhcT4xbydE8X8c]{Resistir Nulidad}",
@@ -154,6 +182,11 @@
     "WFRP4eEndeavours.Title.Trade": " - Comercio oportuno",
     "WFRP4eEndeavours.Title.Ship": " - Mantenimiento del barco",
     "WFRP4eEndeavours.Title.Crew": " - Entrenar tripulaci\u00F3n",
+    "WFRP4eEndeavours.Title.DoubleShifts": " - Dobles turnos",
+    "WFRP4eEndeavours.Title.Woodcutters": " - Liderar le\u00F1adores",
+    "WFRP4eEndeavours.Title.Shelter": " - Encontrar refugio",
+    "WFRP4eEndeavours.Title.ForageforFood": " - Forrajear comida",
+    "WFRP4eEndeavours.Title.Boat": " - Reparar un barco",
     "WFRP4eEndeavours.Title.Null": " - Resistir la Nulidad",
     "WFRP4eEndeavours.Title.Visionaries": " - La profec\u00EDa de Rosendorn",
     "WFRP4eEndeavours.Title.Witness": " - Atestigua",
@@ -186,6 +219,12 @@
     "WFRP4eEndeavours.Failure.Trade": "<p>Cre\u00EDas tener un negocio lucrativo entre manos... La realidad cre\u00EDa otra cosa.</p>",
     "WFRP4eEndeavours.Failure.Ship": "<p>Tu barco necesita m\u00E1s trabajo de mantenimiento.</p>",
     "WFRP4eEndeavours.Failure.Crew": "<p>Esos marineros de agua dulce nunca aprender\u00E1n...</p>",
+    "WFRP4eEndeavours.Failure.DoubleShifts": "<p>El trabajo da frutos, pero est\u00E1s tan @Condition[Fatigado]... \u00BFQuiz\u00E1s has contraido una de esas enfermedades tropicales?</p>",
+    "WFRP4eEndeavours.Failure.Woodcutters": "<p>Tu equipo hace lo que puede.</p>",
+    "WFRP4eEndeavours.Failure.Shelter": "<p>No hay ning\u00FAn refugio seguro por aqu\u00ED.</p>",
+    "WFRP4eEndeavours.Failure.ForageforFood": "<p>Buscas y buscas, pero no encuentras nada de comida.</p>",
+    "WFRP4eEndeavours.Failure.WatchLustria": "<p>Todo est\u00E1 tratando de mataros... \u00BFQuiz\u00E1s tus decisiones est\u00E1n empeorando las cosas?</p>",
+    "WFRP4eEndeavours.Failure.Boat": "<p>Tu barco necesita m\u00E1s reparaciones.</p>",
     "WFRP4eEndeavours.Failure.Null": "<p>Algo del Rasgo de Wilhelm Nulidad se te ha pegado.</p>",
     "WFRP4eEndeavours.Failure.Visionaries": "<p>Rosendorn es golpeada por una terrible revelaci\u00F3n sobre ti, la cual se niega en redondo a compartir contigo.</p>",
     "WFRP4eEndeavours.Failure.Witness": "<p>No aprendes nada nuevo de Ulricsson.</p>",
@@ -219,6 +258,11 @@
     "WFRP4eEndeavours.Success.Trade": "<p>Cre\u00EDas tener un negocio lucrativo entre manos... \u00A1y ten\u00EDas raz\u00F3n!</p>",
     "WFRP4eEndeavours.Success.Ship": "<p>Tu barco empieza a parecerse a su antiguo ser.</p>",
     "WFRP4eEndeavours.Success.Crew": "<p>You've got a crew to be proud of.</p>",
+    "WFRP4eEndeavours.Success.DoubleShifts": "<p>El trabajo da frutos... \u00A1Y sienta genial!</p>",
+    "WFRP4eEndeavours.Success.Woodcutters": "<p>Consigues sacar lo mejor de tu equipo.</p>",
+    "WFRP4eEndeavours.Success.Shelter": "<p>Encuentras un refugio donde pod\u00E9is resguardaros.</p>",
+    "WFRP4eEndeavours.Success.ForageforFood": "<p>Encuentras comida para alimentar a tu grupo.</p>",
+    "WFRP4eEndeavours.Success.Boat": "<p>Tu barco ya se encuentra en mejor estado.</p>",
     "WFRP4eEndeavours.Success.Null": "<p>Todo va bien... de momento.</p>",
     "WFRP4eEndeavours.Success.Visionaries": "<p>Rosendorn atisba un retazo de tu futuro inmediato.</p>",
     "WFRP4eEndeavours.Success.Witness": "<p>Las lecciones de Ulricsson te ense\u00F1an m\u00E1s sobre la vida de Sigmar, \u00BFpero quiz\u00E1 es una herej\u00EDa?</p>",
