--- a/lang/en.json
+++ b/lang/en.json
@@ -7,6 +7,8 @@
     "settings.wom.hint": "Adds the arcane endeavours included in Winds of Magic.",
     "settings.soc.name": "Sea of Claws Endeavours",
     "settings.soc.hint": "Replace all between adventures endeavours with the ones listed in Sea of Claws. If Up in Arms Endeavours is enabled, the available ones will be added",
+    "settings.lustria.name": "Lustria Endeavours",
+    "settings.lustria.hint": "Adds the Lustrian between adventures endeavours and replace all travel endeavours with the ones listed in Lustria.",
     "settings.shelley.name": "Shelley Endeavour",
     "settings.shelley.hint": "Adds the endeavour granted by Scealleah 'Shelley' Thorncobble (Patrons of the Old World I).",
     "settings.farforian.name": "Farforian Endeavour",
@@ -64,7 +66,14 @@
     "WFRP4eEndeavours.BA.Trade": "Opportune Trade",
     "WFRP4eEndeavours.BA.Ship": "Ship Maintenance",
     "WFRP4eEndeavours.BA.Crew": "Train Crew",
-    "WFRP4eEndeavours.BA.Skaven": "A Study in Skaven",
+    "WFRP4eEndeavours.BA.Deforestation": "Deforestation",
+    "WFRP4eEndeavours.BA.Ancients": "Attuning With the Ancients (Requires Monument)",
+    "WFRP4eEndeavours.BA.Boatbuilding": "Boatbuilding (Requires Port)",
+    "WFRP4eEndeavours.BA.Construction": "Construction (May have requirement)",
+    "WFRP4eEndeavours.BA.Entertaining": "Entertaining (Requires Venue)",
+    "WFRP4eEndeavours.BA.Border": "Patrolling the Border (Requires Fortification)",
+    "WFRP4eEndeavours.BA.Rationing": "Rationing (Requires Farmstead)",
+    "WFRP4eEndeavours.BA.Expedition": "Sponsoring an Expedition (Requires Capitol)",    "WFRP4eEndeavours.BA.Skaven": "A Study in Skaven",
     "WFRP4eEndeavours.BA.Best": "Only the Best",
     "WFRP4eEndeavours.BA.Hypotesis": "The Null Hypotesis",
     "WFRP4eEndeavours.BA.Hedge": "Hedge School",
@@ -79,6 +88,9 @@
     "WFRP4eEndeavours.Travel.Practice": "Practice a Skill",
     "WFRP4eEndeavours.Travel.Recuperate": "Recuperate",
     "WFRP4eEndeavours.Travel.Camp": "Make Camp",
+    "WFRP4eEndeavours.Travel.Shelter": "Find Shelter",
+    "WFRP4eEndeavours.Travel.ForageforFood": "Forage for Food",
+    "WFRP4eEndeavours.Travel.Boat": "Repair a Boat",
     
     "WFRP4eEndeavours.Link.Animal": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WQQk92GoGp7fRH89]{Animal Training}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.9mIhYiuhgKVuWiAF]{Animal Training (Demigryph)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.MOq6Dd5wvXqpRLCW]{Animal Training (Dog)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.n7sByqBJtLN2E2Of]{Animal Training (Horse)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.5aAOdvSVsKFiDLZj]{Animal Training (Pegasus)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.8DoSS6o6tKczwBOD]{Animal Training (Pigeon)}",
     "WFRP4eEndeavours.Link.Banking": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.OqE6vzTEebofbX92]{Banking}.",
@@ -122,6 +134,21 @@
     "WFRP4eEndeavours.Link.Trade": "Opportune Trade.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.5Hm6KR2gxcZAyZML]{Opportune Trade}",
     "WFRP4eEndeavours.Link.Ship": "Ship Maintenance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.RAhGd9iU42ugyzTB]{Ship Maintenance (Boatbuilder)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.6PIkSbxFLwCM9tkA]{Ship Maintenance (Carpenter)}",
     "WFRP4eEndeavours.Link.Crew": "Train Crew.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.M0E7H5NukVRD734B]{Train Crew}",
+    "WFRP4eEndeavours.Link.Deforestation": "Deforestation.</b></h3><p>Maybe @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.gNUdm6x4ko6L4BJg]{Double Shifts} and/or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Z3IVWcZ3BesTlXWV]{Leading Woodcutters}",
+    "WFRP4eEndeavours.Link.Ancients": "Attuning With the Ancients.",
+    "WFRP4eEndeavours.Link.Boatbuilding": "Boatbuilding.",
+    "WFRP4eEndeavours.Link.Construction": "Construction.",
+    "WFRP4eEndeavours.Link.Entertaining": "Entertaining.",
+    "WFRP4eEndeavours.Link.Border": "Patrolling the Border.",
+    "WFRP4eEndeavours.Link.Rationing": "Rationing.",
+    "WFRP4eEndeavours.Link.Expedition": "Sponsoring an Expedition.",
+    "WFRP4eEndeavours.Link.Shelter": "Find Shelter.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.bIXQJZBEaL5iziDm]{Find Shelter}",
+    "WFRP4eEndeavours.Link.ForageforFood": "Forage for Food.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.uwUjherl2lz7eQzJ]{Forage for Food}",
+    "WFRP4eEndeavours.Link.WatchLustria": "Keep Watch.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.vVyunkd81fwidcia]{Keep Watch}",
+    "WFRP4eEndeavours.Link.MapLustria": "Map the Route.",
+    "WFRP4eEndeavours.Link.PracticeLustria": "Practice a Skill.",
+    "WFRP4eEndeavours.Link.CampLustria": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.yIa61a3wdrpyYJVg]{Make Camp (Rest)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.8m5LbpBAEO6PFrzD]{Make Camp (Heal)}",
+    "WFRP4eEndeavours.Link.Boat": "Repair a Boat.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.kgbyWNs5nzPmSKZn]{Repair a Boat (Boatbuilder)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.1vLRKb4gC2CgWxaO]{Repair a Boat (Carpenter)}",
     "WFRP4eEndeavours.Link.Skaven": "A Study in Skaven.",
     "WFRP4eEndeavours.Link.Best": "Only the Best.",
     "WFRP4eEndeavours.Link.Hypotesis": "The Null Hypotesis.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.HrkhcT4xbydE8X8c]{Resist Null}",
@@ -154,6 +181,11 @@
     "WFRP4eEndeavours.Title.Trade": " - Opportune Trade",
     "WFRP4eEndeavours.Title.Ship": " - Ship Maintenance",
     "WFRP4eEndeavours.Title.Crew": " - Train Crew",
+    "WFRP4eEndeavours.Title.DoubleShifts": " - Double Shifts",
+    "WFRP4eEndeavours.Title.Woodcutters": " - Leading Woodcutters",
+    "WFRP4eEndeavours.Title.Shelter": " - Find Shelter",
+    "WFRP4eEndeavours.Title.ForageforFood": " - Forage for Food",
+    "WFRP4eEndeavours.Title.Boat": " - Repair a Boat",
     "WFRP4eEndeavours.Title.Null": " - Resist Null",
     "WFRP4eEndeavours.Title.Visionaries": " - Rosendorn's Prophecy",
     "WFRP4eEndeavours.Title.Witness": " - Bear Witness",
@@ -186,6 +218,12 @@
     "WFRP4eEndeavours.Failure.Trade": "<p>You thought you had a profitable business at hand... Reality tought otherwise.</p>",
     "WFRP4eEndeavours.Failure.Ship": "<p>Your ship needs more maintenance work.</p>",
     "WFRP4eEndeavours.Failure.Crew": "<p>Those landlubbers will never learn...</p>",
+    "WFRP4eEndeavours.Failure.DoubleShifts": "<p>Work pays, but you're so @Condition[Fatigued]... Maybe you've contracted one of those tropical diseases?</p>",
+    "WFRP4eEndeavours.Failure.Woodcutters": "<p>Your team works as hard as they can.</p>",
+    "WFRP4eEndeavours.Failure.Shelter": "<p>There's no shelter nearby.</p>",
+    "WFRP4eEndeavours.Failure.ForageforFood": "<p>You search and search, but can't find any food.</p>",
+    "WFRP4eEndeavours.Failure.WatchLustria": "<p>Everything is trying to kill you... Maybe you are making everything worse?</p>",
+    "WFRP4eEndeavours.Failure.Boat": "<p>Your boat needs more repairs.</p>",
     "WFRP4eEndeavours.Failure.Null": "<p>Some of Wilhelm's Null Trait has rubbed off on you.</p>",
     "WFRP4eEndeavours.Failure.Visionaries": "<p>Rosendorn is struck by a terrible revelation about you which she absolutely refuses to share with you.</p>",
     "WFRP4eEndeavours.Failure.Witness": "<p>You don't learn anything new from Ulricsson.</p>",
@@ -219,6 +257,11 @@
     "WFRP4eEndeavours.Success.Trade": "<p>You thought you had a profitable business at hand... and were right!</p>",
     "WFRP4eEndeavours.Success.Ship": "<p>Your ship is starting to look like it's former self.</p>",
     "WFRP4eEndeavours.Success.Crew": "<p>You've got a crew to be proud of.</p>",
+    "WFRP4eEndeavours.Success.DoubleShifts": "<p>Work pays... and it feels great!</p>",
+    "WFRP4eEndeavours.Success.Woodcutters": "<p>You bring out the best of your team.</p>",
+    "WFRP4eEndeavours.Success.Shelter": "<p>You find a place to shelter yourselves.</p>",
+    "WFRP4eEndeavours.Success.ForageforFood": "<p>You find food to feed your group.</p>",
+    "WFRP4eEndeavours.Success.Boat": "<p>Your boat is in better shape now.</p>",
     "WFRP4eEndeavours.Success.Null": "<p>All is going well... for now.</p>",
     "WFRP4eEndeavours.Success.Visionaries": "<p>Rosendorn catches a glimpse of your immediate future.</p>",
     "WFRP4eEndeavours.Success.Witness": "<p>Ulricsson's lessons teach you more about Sigmar's life, but maybe it's heresy?</p>",
